<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/tabMode"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TableRow>

        <EditText
            android:id="@+id/et_version"
            android:hint="@string/android_version"></EditText>
    </TableRow>

    <TableRow>

        <EditText
            android:id="@+id/et_codename"
            android:hint="@string/androd_name"></EditText>
    </TableRow>

    <TableRow>

        <Button
            android:id="@+id/add_btn"
            android:layout_width="wrap_content"
            android:layout_span="2"
            android:onClick="add"
            android:text="@string/add_btn">

        </Button>
    </TableRow>

    <TableRow
        android:paddingTop="10dp"
        android:paddingBottom="10dp">

        <TextView
            android:id="@+id/tv_version"
            android:background="@color/teal_200"
            android:text="@string/version">

        </TextView>

        <TextView
            android:id="@+id/tv_codename"
            android:background="@color/teal_200"
            android:text="@string/code_name">

        </TextView>
    </TableRow>

    <TableRow android:paddingBottom="10dp">

        <TextView
            android:id="@+id/tv_android8"
            android:background="@color/teal_700"
            android:text="@string/andoroid8">

        </TextView>

        <TextView
            android:id="@+id/tv_oreo"
            android:background="@color/teal_700"
            android:text="@string/oreo">

        </TextView>
    </TableRow>

</TableLayout>